mars_ros2/log/build_2022-06-20_04-46-59/Webserver/stderr.log
  File "/home/incubus/mars_ros2/install/Webserver/lib/python3.8/site-packages/Webserver/Flask.py", line 59
    def main()
             ^
SyntaxError: invalid syntax

